test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_procedure_local_var_decl.draco
proc main() void : int a; a := 0; corp;

