test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_unsigned_as_identifier.draco
int unsigned;
 
proc main() void : a := 1; corp;
